fix: read bidding by auction 변경사항 적용